--- a/templates/index.html
+++ b/templates/index.html
@@ -4,17 +4,13 @@
 <html>
 <head>
     {% bootstrap_css %}
-<<<<<<< HEAD
     <script src="/static/jquery-1.7.2.min.js"></script>
-=======
     {% bootstrap_custom_less "/lib/bootstrap_custom.less" %}
     $(".collapse").collapse()
->>>>>>> 4370f56ea5bfeaf35cae9553820659684cdcbf03
     <title>Tufts Scheduler</title>
 </head>
 
 <body>
-<<<<<<< HEAD
 <div class="topbar">
     <div class="fill">
         <div class="container">
@@ -29,56 +25,11 @@
                     {% endif %}
                 </a>
             </p>
+            </div>
         </div>
     </div>
-=======
-<h1>Tufts Scheduler</h1>
-<div id="Personal Event">
-
-    <h2>Step 1: Peronsal Events</h2>
-    <h3>Add any personal events to the calendar so we can include them in your schedule.</h3>
-    <p>Quick Add</p>
-    <input type="text" name="personal_event" placeholder="Wind Ensemble on Monday and Wednesday from 4:30 to 6:30"/>
-    <h3>Personal Events</h3>
-    <ul id="presonal_list">
-        <li>Wind Ensemble on Monday and Wednesday from 4:30 to 6:30</li>
-    </ul>
->>>>>>> b9766da145d42168489f7228b12230b4031e2151
 </div>
 
-<<<<<<< HEAD
-<div id="Add Classes">
-    <h2>Step 2: Add Classes</h2>
-    <h3>Select the department.</h3>
-    <form action="">
-       {{ departments}}
-        <script>
-            $("#id_department").change(function (e) {
-                if ($(this).val()) {
-                    $.get('ajax/getcourses/'+$(this).val(),
-                    function (response) {
-                        courses = $.parseJSON(response);
-                        $("#id_course").html("");
-                         for (i in courses) {
-                             console.log(courses[i]);
-                             newinner = $("#id_course").html();
-                             newinner += "<option value='"+courses[i].id+"'>"+courses[i].courseNumber+" - "+courses[i].name+"</option>";
-                             $("#id_course").html(newinner);
-
-                         }
-                    });
-                }
-            });
-        </script>
-        <h3>Select the class.</h3>
-        <form action="">
-            <select name="class" id="id_course">
-                <option value="Comp40">Comp40</option>
-                <option value="Comp120">Comp120</option>
-            </select>
-            <h3>Class Info</h3>
-            <p>Name:<br>Description:</p>
-=======
 <div class="container-fluid">
     <div class="row">
         <div class="span7">
@@ -101,13 +52,28 @@
                 <h2>Step 2: Add Classes</h2>
                 <h3>Select the department.</h3>
                 <form action="">
-                    <select name="department">
-                        <option value="Computer Science">Computer Science</option>
-                        <option value="Other">Other</option>
-                    </select>
+                    {{ departments}}
+                    <script>
+                        $("#id_department").change(function (e) {
+                            if ($(this).val()) {
+                                $.get('ajax/getcourses/'+$(this).val(),
+                                        function (response) {
+                                            courses = $.parseJSON(response);
+                                            $("#id_course").html("");
+                                            for (i in courses) {
+                                                console.log(courses[i]);
+                                                newinner = $("#id_course").html();
+                                                newinner += "<option value='"+courses[i].id+"'>"+courses[i].courseNumber+" - "+courses[i].name+"</option>";
+                                                $("#id_course").html(newinner);
+
+                                            }
+                                        });
+                            }
+                        });
+                    </script>
                     <h3>Select the class.</h3>
                     <form action="">
-                        <select name="class">
+                        <select name="class" id="id_course">
                             <option value="Comp40">Comp40</option>
                             <option value="Comp120">Comp120</option>
                         </select>
@@ -125,7 +91,6 @@
                     <li>ELS 101</li>
             </div>
 
->>>>>>> 4370f56ea5bfeaf35cae9553820659684cdcbf03
             <form action="">
                 <input type="button" value="Magic">
             </form>
